<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="org.example.app.ui.login.LoginFragment"
        android:label="@string/title_login">
        <action
            android:id="@+id/action_login_to_signup"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="org.example.app.ui.signup.SignUpFragment"
        android:label="@string/title_signup">
        <action
            android:id="@+id/action_signup_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="org.example.app.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard" />
</navigation>
